--- a/addons/payment_ogone/views/ogone.xml
+++ b/addons/payment_ogone/views/ogone.xml
@@ -54,7 +54,7 @@
         </template>
 
         <template id="ogone_s2s_form">
-            <form method="post" action="/payment/ogone/s2s/create">
+            <form method="post" t-att-action="'/payment/ogone/s2s/create' if not json else '/payment/ogone/s2s/create_json'">
                 <div class="row">
                     <div class="form-group col-sm-8">
                         <label class="control-label" for="cc_number">Card number</label>
@@ -76,6 +76,7 @@
                         <input type="text" name="cc_expiry" id="cc_expiry" class="form-control" maxlength="7" placeholder="MM / YY"/>
                     </div>
                     <input type="hidden" name="acquirer_id" t-att-value="id"/>
+                    <input t-if="return_url" type="hidden" name="return_url" t-att-value="return_url"/>
                     <input t-if="partner_id" type="hidden" name="partner_id" t-att-value="partner_id"/>
                     <div class="clearfix"/>
                 </div>
